# yahoo-finance-metrics

./: .dockerignore  Cargo.toml  Dockerfile  README.md  config_example.json  run.sh
.github/workflows/: docker-image.yml
src/: main.rs
src/data/: metrics.json
src/static/templates/: index.html  settings.html
src/utils/: get_stock_data.rs  get_stock_exchange_info.rs  get_stock_market_status.rs  mod.rs
