[package]
name = "yahoo-finance-metrics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
headless_chrome = { git = "https://github.com/rust-headless-chrome/rust-headless-chrome", default-features = false, features = [
    "rustls",
] }

tokio = { version = "1.0", features = ["full"] }
serde_json = "1.0"
serde = "1.0.195"
actix-web = "4.4.1"
tokio_schedule = "0.3.1"
chrono = "0.4.31"
actix-rt = "2.9.0"
